--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-typewriting-effect": "^1.0.4",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
