--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hye-stone.github.io/portfolio/",
+  "homepage": "https://hye-stone.github.io/hye-seok-portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
